compiler/testData/diagnostics/tests/invalidFileNames/1.kt
<!INVALID_FILE_NAME!>package zz

fun test() {

}<!>